--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,3 @@
-title: tigoe.github.io
-
-# The `>` after `description:` means to ignore line-breaks until next key.
-# If you want to omit the line-break after the end of text, use `>-` instead.
-
-# Build settings
-
-theme: minima
-
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
-  - jekyll-feed
-  - jekyll-seo-tag
-
-# Theme-specific settings
-
-minima:
-  # Minima date format.
-  # Refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this.
-  #
-  # date_format: "%b %-d, %Y"
-codeurl: "https://github.com/tigoe"
+- jekyll-remote-theme # add this line to the plugins list if you already have one
