--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+
+title: Tom Igoe's GitHub Repositories
+description: Code for my classes at [ITP/IMA](https://itp.nyu.edu) at New York University, for [Arduino](https://www.arduino.cc), and personal projects. 
